--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/monaco-editor@latest/min/vs/editor/editor.main.css"
+    />
+    <script src="https://unpkg.com/monaco-editor@latest/min/vs/loader.js"></script>
     <title>Vite + React + TS</title>
   </head>
   <body>
